# qubit-harness

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qubit_harness/: graph.py  harness.py  main.py  models.py  simulator.py  tools.py  tracing.py
tests/: test_graph.py  test_harness.py  test_models.py  test_simulator.py
