[project]
name = "qubit-harness"
version = "0.1.0"
description = "LangGraph-based agentic harness for qubit calibration (portfolio demo)"
license = "MIT"
authors = [
    {name = "Mikko Tarkiainen"},
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "langfuse>=2.0",
    "anthropic>=0.40",
    "langchain>=1.3.1",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/mikko-lab/qubit-harness"

[project.scripts]
qubit-harness = "qubit_harness.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qubit_harness"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
